--- a/form.html
+++ b/form.html
@@ -68,7 +68,7 @@
             <div class="text-white">
               <h1 class="mb-3">Pet Health Checker</h1>
               <p class="mb-3">Provided by: Chicken Feet</p>
-              <a class="btn btn-outline-light btn-lg" href="form.html" role="button"
+              <a class="btn btn-outline-light btn-lg" href="" role="button"
                 >Check my pet's health</a
               >
             </div>
