Changed navigation bar color
-Changed navigation bar color
-Added form in form page

--- a/form.html
+++ b/form.html
@@ -19,7 +19,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
       rel="stylesheet"
     />
-    <title>Index Page</title>
+    <title>Form Page</title>
+    <link rel = "stylesheet" type = "text/css" href = "./styles/styles.css"/>
   </head>
   <body>
     <header>
@@ -54,29 +55,28 @@
         </div>
       </nav>
       <!-- Navbar -->
-
-      <!-- Background image -->
-      <div
-        class="p-5 text-center bg-image"
-        style="
-          background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
-          height: 400px;
-        "
-      >
-        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
-          <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="text-white">
-              <h1 class="mb-3">Pet Health Checker</h1>
-              <p class="mb-3">Provided by: Chicken Feet</p>
-              <a class="btn btn-outline-light btn-lg" href="" role="button"
-                >Check my pet's health</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
       <!-- Background image -->
     </header>
+    <h1>Check my pet's health</h1>
+    <div class="form-outline">
+      <input type="text" id="" class="form-control" />
+      <label class="form-label" for="form12">Species Type</label>
+    </div>
+
+    <div class="form-outline">
+      <input type="text" id="" class="form-control" />
+      <label class="form-label" for="form12">Breed</label>
+    </div>
+
+    <div class="form-outline">
+      <input type="text" id="" class="form-control" />
+      <label class="form-label" for="form12">Weight</label>
+    </div>
+
+    <div class="form-outline">
+      <input type="text" id="" class="form-control" />
+      <label class="form-label" for="form12">Age</label>
+    </div>
     <!-- MDB -->
     <script
       type="text/javascript"
