changed spacing of input field

--- a/form.html
+++ b/form.html
@@ -58,22 +58,22 @@
       <!-- Background image -->
     </header>
     <h1>Check my pet's health</h1>
-    <div class="form-outline">
+    <div class="form-outline mb-3">
       <input type="text" id="" class="form-control" />
       <label class="form-label" for="form12">Species Type</label>
     </div>
 
-    <div class="form-outline">
+    <div class="form-outline mb-3">
       <input type="text" id="" class="form-control" />
       <label class="form-label" for="form12">Breed</label>
     </div>
 
-    <div class="form-outline">
+    <div class="form-outline mb-3">
       <input type="text" id="" class="form-control" />
       <label class="form-label" for="form12">Weight</label>
     </div>
 
-    <div class="form-outline">
+    <div class="form-outline mb-3">
       <input type="text" id="" class="form-control" />
       <label class="form-label" for="form12">Age</label>
     </div>
