resized input field in form page
-Resized input field
-changed heading

--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <title>Form Page</title>
-    <link rel = "stylesheet" type = "text/css" href = "./styles/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
   </head>
   <body>
     <header>
@@ -57,25 +57,26 @@
       <!-- Navbar -->
       <!-- Background image -->
     </header>
-    <h1>Check my pet's health</h1>
-    <div class="form-outline mb-3">
-      <input type="text" id="" class="form-control" />
-      <label class="form-label" for="form12">Species Type</label>
-    </div>
+    <h1>Pet Health Checker</h1>
+    <div class="form-class">
+      <div class="form-outline mb-3">
+        <input type="text" id="" class="form-control" />
+        <label class="form-label" for="form12">Species Type</label>
+      </div>
+      <div class="form-outline mb-3">
+        <input type="text" id="" class="form-control" />
+        <label class="form-label" for="form12">Breed</label>
+      </div>
 
-    <div class="form-outline mb-3">
-      <input type="text" id="" class="form-control" />
-      <label class="form-label" for="form12">Breed</label>
-    </div>
+      <div class="form-outline mb-3">
+        <input type="text" id="" class="form-control" />
+        <label class="form-label" for="form12">Weight</label>
+      </div>
 
-    <div class="form-outline mb-3">
-      <input type="text" id="" class="form-control" />
-      <label class="form-label" for="form12">Weight</label>
-    </div>
-
-    <div class="form-outline mb-3">
-      <input type="text" id="" class="form-control" />
-      <label class="form-label" for="form12">Age</label>
+      <div class="form-outline mb-3">
+        <input type="text" id="" class="form-control" />
+        <label class="form-label" for="form12">Age</label>
+      </div>
     </div>
     <!-- MDB -->
     <script
