Added gender option in the form

--- a/form.html
+++ b/form.html
@@ -55,7 +55,7 @@
         </div>
       </nav>
       <!-- Navbar -->
-      <!-- Background image -->
+      <!-- Background image  male, female, spade, neutered -->
     </header>
     <h1>Pet Health Checker</h1>
     <div class="form-class">
@@ -77,7 +77,55 @@
         <input type="text" id="" class="form-control" />
         <label class="form-label" for="form12">Age</label>
       </div>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="inlineRadioOptions"
+          id="inlineRadio1"
+          value="option1"
+        />
+        <label class="form-check-label" for="inlineRadio1">Male</label>
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="inlineRadioOptions"
+          id="inlineRadio2"
+          value="option2"
+        />
+        <label class="form-check-label" for="inlineRadio2">Female</label>
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="inlineRadioOptions"
+          id="inlineRadio3"
+          value="option3"
+        />
+        <label class="form-check-label" for="inlineRadio3">Spayed</label>
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="inlineRadioOptions"
+          id="inlineRadio3"
+          value="option3"
+        />
+        <label class="form-check-label" for="inlineRadio3">Neuter</label>
+      </div>
+      <div class="form-outline mb-3">
+        <button type="button" class="btn btn-success">Check</button>
+      </div>
     </div>
+
     <!-- MDB -->
     <script
       type="text/javascript"
