--- a/form.html
+++ b/form.html
@@ -125,7 +125,18 @@
         <button type="button" class="btn btn-success">Check</button>
       </div>
     </div>
-
+    <div class="popup-align">
+      <div class="popup" onclick="myFunction()">
+        Random Pet Facts
+        <span class="popuptext" id="myPopup">A Simple Popup!</span>
+      </div>
+    </div>
+    <script>
+      function myFunction() {
+        var popup = document.getElementById("myPopup");
+        popup.classList.toggle("show");
+      }
+    </script>
     <!-- MDB -->
     <script
       type="text/javascript"
