--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel = "stylesheet" type = "text/css" href = "./styles/styles.css"/>
     <title>Index Page</title>
   </head>
