--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
           <!-- Collapsible wrapper -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Navbar brand -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="#">
+            <a class="navbar-brand mt-2 mt-lg-0" href="#" style="color: white">
             <b>PHC</b></a>
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html" style="color: white">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="form.html">Check your pet's health</a>
+                <a class="nav-link" href="form.html" style="color: white">Check your pet's health</a>
               </li>
             </ul>
             <!-- Left links -->
