Fix ids for form in form page

--- a/form.html
+++ b/form.html
@@ -70,22 +70,22 @@
     <h1>Pet Health Checker</h1>
     <div class="form-class">
       <div class="form-outline mb-3">
-        <input type="text" id="" class="form-control" />
-        <label class="form-label" for="form12">Species Type</label>
+        <input type="text" id="speciesType" class="form-control" />
+        <label class="form-label" for="speciesType">Species Type</label>
       </div>
       <div class="form-outline mb-3">
-        <input type="text" id="" class="form-control" />
-        <label class="form-label" for="form12">Breed</label>
-      </div>
-
-      <div class="form-outline mb-3">
-        <input type="text" id="" class="form-control" />
-        <label class="form-label" for="form12">Weight</label>
+        <input type="text" id="breed" class="form-control" />
+        <label class="form-label" for="breed">Breed</label>
       </div>
 
       <div class="form-outline mb-3">
-        <input type="text" id="" class="form-control" />
-        <label class="form-label" for="form12">Age</label>
+        <input type="text" id="weight" class="form-control" />
+        <label class="form-label" for="weight">Weight</label>
+      </div>
+
+      <div class="form-outline mb-3">
+        <input type="text" id="age" class="form-control" />
+        <label class="form-label" for="age">Age</label>
       </div>
 
       <div class="form-check form-check-inline">
