Updated ids in the form

--- a/form.html
+++ b/form.html
@@ -94,7 +94,7 @@
           type="radio"
           name="inlineRadioOptions"
           id="inlineRadio1"
-          value="option1"
+          value="Male"
         />
         <label class="form-check-label" for="inlineRadio1">Male</label>
       </div>
@@ -105,7 +105,7 @@
           type="radio"
           name="inlineRadioOptions"
           id="inlineRadio2"
-          value="option2"
+          value="Female"
         />
         <label class="form-check-label" for="inlineRadio2">Female</label>
       </div>
@@ -116,7 +116,7 @@
           type="radio"
           name="inlineRadioOptions"
           id="inlineRadio3"
-          value="option3"
+          value="Spayed"
         />
         <label class="form-check-label" for="inlineRadio3">Spayed</label>
       </div>
@@ -127,7 +127,7 @@
           type="radio"
           name="inlineRadioOptions"
           id="inlineRadio3"
-          value="option3"
+          value="Neuter"
         />
         <label class="form-check-label" for="inlineRadio3">Neuter</label>
       </div>
