Added pointer design for navigating navbar

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="index.html" style="color: white">Home</a>
+                <a class="nav-link inactiveLink" href="index.html" style="color: rgb(177, 177, 177)">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="form.html" style="color: white">Check your pet's health</a>
