--- a/form.html
+++ b/form.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="index.html" style="color: white">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="form.html" style="color: white">Check your pet's health</a>
+                <a class="nav-link inactiveLink" href="form.html" style="color: rgb(177, 177, 177)">Check your pet's health</a>
               </li>
             </ul>
             <!-- Left links -->
