--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <!-- Collapsible wrapper -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Navbar brand -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="#" style="color: white">
+            <a class="navbar-brand mt-2 mt-lg-0" href="index.html" style="color: white">
             <b>PHC</b></a>
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
