--- a/form.html
+++ b/form.html
@@ -67,7 +67,12 @@
       <!-- Navbar -->
       <!-- Background image  male, female, spade, neutered -->
     </header>
-    <h1>Pet Health Checker</h1>
+    <div class="mb-2">
+
+    </div>
+    <div class="mb-3">
+      <h1>Pet Health Checker</h1>
+    </div>
     <div class="form-class">
       <div class="form-outline mb-3">
         <input type="text" id="speciesType" class="form-control" />
