renamed navbar and button title

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a class="nav-link inactiveLink" href="index.html" style="color: rgb(177, 177, 177)">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="form.html" style="color: white">Check your pet's health</a>
+                <a class="nav-link" href="form.html" style="color: white">Check my pet</a>
               </li>
             </ul>
             <!-- Left links -->
