--- a/form.html
+++ b/form.html
@@ -79,8 +79,8 @@
         <label class="form-label" for="speciesType">Species Type</label>
       </div>
       <div class="form-outline mb-3">
-        <input type="text" id="breed" class="form-control" />
-        <label class="form-label" for="breed">Breed</label>
+        <input type="text" id="height" class="form-control" />
+        <label class="form-label" for="height">Height</label>
       </div>
 
       <div class="form-outline mb-3">
