--- a/form.html
+++ b/form.html
@@ -86,6 +86,7 @@
            <option>Boxers</option>
            <option>Bull Mastiff</option>
            <option>Bloodhounds</option>
+           <option>Dalmatian</option>
            <option>German Shepherd</option>
            <option>Great Danes</option>
            <option>Labrador</option>
@@ -191,6 +192,7 @@
 
       function testform() {
         const fetchPromise = fetch("http://localhost:8081/api/Out").then((response) => response.text()).then((data) => console.log(data));
+        
         console.log(document.getElementById('speciesType').value);
         console.log(document.getElementById('breed').value);
         console.log(document.getElementById('height').value);
