--- a/index.html
+++ b/index.html
@@ -19,72 +19,180 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel = "stylesheet" type = "text/css" href = "./styles/styles.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
     <title>Index Page</title>
   </head>
   <body>
-    <header>
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- Container wrapper -->
-        <div class="container-fluid">
-          <!-- Toggle button -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-mdb-toggle="collapse"
-            data-mdb-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
+    <!-- Background image -->
+    <div class="hero_area">
+      <div class="hero_bg_box">
+        <img src="./images/background.jpeg" alt="" />
+      </div>
+      <div class="indextitle-details">
+        <h6 class="mb-3 title-main">Pet Health App</h6>
+        <div class="fade-in-effect">
+          <h2 class="mb-3">
+            A quick way to check your pet's health
+          </h2>
+        </div>
+        <div class="text-white">
+          <a class="btn btn-outline-light btn-lg" href="#form-div" role="button"
+            >Check my pet's health</a
           >
-            <i class="fas fa-bars"></i>
-          </button>
-      
-          <!-- Collapsible wrapper -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Navbar brand -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="index.html" style="color: white">
-            <b>PHC</b></a>
-            <!-- Left links -->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link inactiveLink" href="index.html" style="color: rgb(177, 177, 177)">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="form.html" style="color: white">Check my pet</a>
-              </li>
-            </ul>
-            <!-- Left links -->
-          </div>
-          <!-- Collapsible wrapper -->
-        <!-- Container wrapper -->
-      </nav>
-      <!-- Navbar -->
-
-      <!-- Background image -->
-      <div
-        class="p-5 text-center bg-image"
-        style="
-          background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
-          height: 400px;
-        "
-      >
-        <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
-          <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="text-white">
-              <h1 class="mb-3">Pet Health Checker</h1>
-              <p class="mb-3">Provided by: Chicken Feet</p>
-              <a class="btn btn-outline-light btn-lg" href="form.html" role="button"
-                >Check my pet's health</a
-              >
-            </div>
-          </div>
         </div>
       </div>
-      <!-- Background image -->
-    </header>
+    </div>
+    <div id="form-div">
+    <div class="mb-2">
+
+    </div>
+    <div class="mb-3">
+      <h1>Pet Health Checker</h1>
+    </div>
+    <div class="form-class">
+      <div class="form-outline mb-3">
+        <input type="text" id="speciesType" class="form-control" />
+        <label class="form-label" for="speciesType">Species Type</label>
+      </div>
+
+      <div class="form-outline mb-3">
+        <input type="text" id="height" class="form-control" />
+        <label class="form-label" for="height">Height</label>
+      </div>
+
+      <div class="form-outline mb-3">
+        <input type="text" id="weight" class="form-control" />
+        <label class="form-label" for="weight">Weight</label>
+      </div>
+
+      <div class="form-outline mb-3">
+        <input type="text" id="age" class="form-control" />
+        <label class="form-label" for="age">Age</label>
+      </div>
+
+      <div class="form-outline mb-3">
+        <label for="breed">Breed Type</label>
+        <select class="form-control" id="breed">
+           <option>Beagles</option>
+           <option>Boxers</option>
+           <option>Bull Mastiff</option>
+           <option>Bloodhounds</option>
+           <option>Dalmatian</option>
+           <option>German Shepherd</option>
+           <option>Great Danes</option>
+           <option>Labrador</option>
+           <option>Pug</option>
+           <option>Rottweilers</option>
+           <option>St. Bernards</option>
+        </select>
+     </div>
+
+      <div class="form-outline mb-3">
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="gender"
+          id="gendermale"
+          value="Male"
+        />
+        <label class="form-check-label" for="inlineRadio1">Male</label>
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="gender"
+          id="genderfemale"
+          value="Female"
+        />
+        <label class="form-check-label" for="inlineRadio2">Female</label>
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="gender"
+          id="genderspayed"
+          value="Spayed"
+        />
+        <label class="form-check-label" for="inlineRadio3">Spayed</label>
+      </div>
+
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="gender"
+          id="genderneuter"
+          value="Neutered"
+        />
+        <label class="form-check-label" for="inlineRadio3">Neutered</label>
+      </div>
+      </div>
+      <div class="form-outline mb-3">
+        <button type="button" class="btn btn-success" onclick="testform()">Check</button>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="popup-align">
+      <div class="popup" onclick="petFacts()">
+      <div class="card">
+        <img src="./images/offlightbulb.png" alt="Light Bulb Off" width="300" height="300" background-color="faf9f6">
+          <img src="./images/onlightbulb.png" class="img-top" alt="Light Bulb On" width="300" height="300" background-color="faf9f6">
+      </div>
+        <span class="popuptext" id="myPopup">A Simple Popup!</span>
+      </div>
+    </div>
+  </div>
+    <!-- MDB -->
+    <script>
+      function petFacts() {
+        var popup = document.getElementById("myPopup");
+        var facts1 = "A cat has 32 muscles in each ear, humans only have 6";
+        var facts2 = "Cats spend 15-20% of their time grooming";
+        var facts3 =
+          "A dog’s sense of smell is so precise, it could detect a teaspoon of sugar in a million gallons of water, or two Olympic-sized pools worth";
+        var randomNumber = Math.floor(Math.random() * 2);
+        switch (randomNumber) {
+          case 0:
+            document.getElementById("myPopup").innerHTML = facts1;
+            break;
+          case 1:
+            document.getElementById("myPopup").innerHTML = facts2;
+            break;
+          case 2:
+            document.getElementById("myPopup").innerHTML = facts3;
+            break;
+        }
+        popup.classList.toggle("show");
+      }
+
+      function testform() {
+        const fetchPromise = fetch("http://localhost:8081/api/Out")
+          .then((response) => response.text())
+          .then((data) => console.log(data));
+
+        console.log(document.getElementById("speciesType").value);
+        console.log(document.getElementById("breed").value);
+        console.log(document.getElementById("height").value);
+        console.log(document.getElementById("weight").value);
+        console.log(document.getElementById("age").value);
+        console.log(
+          document.querySelector('input[name="gender"]:checked').value
+        );
+      }
+    </script>
     <!-- MDB -->
     <script
       type="text/javascript"
