fixed image styling

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
     </div>
     <div class="mb-3">
-      <h1>Pet Health Checker</h1>
+      <div class="main-section">
+        <h1>Pet Health Checker</h1>
+     </div>
     </div>
     <div class="form-class">
       <form>
@@ -152,8 +154,8 @@
     <div class="popup-align">
       <div class="popup" onclick="petFacts()">
       <div class="card">
-        <img src="./images/offlightbulb.png" alt="Light Bulb Off" width="300" height="300" background-color="faf9f6">
-          <img src="./images/onlightbulb.png" class="img-top" alt="Light Bulb On" width="300" height="300" background-color="faf9f6">
+        <img src="./images/offlightbulb.png" alt="Light Bulb Off" background-color="faf9f6" class="offimage">
+          <img src="./images/onlightbulb.png" class="img-top onimage" alt="Light Bulb On" background-color="faf9f6">
       </div>
         <span class="popuptext" id="myPopup">A Simple Popup!</span>
       </div>
